<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_refresher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/details_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/details_error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/error" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/details_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/flag_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/details_padding">

                    <TextView
                        android:id="@+id/name_view"
                        style="@style/text_country_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name" />

                    <TextView
                        android:id="@+id/population_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/population" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/delimiter_margin"
                        android:background="@color/colorGray" />

                    <TextView
                        android:id="@+id/capital_view"
                        style="@style/text_detail_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capital" />

                    <TextView
                        android:id="@+id/currency_view"
                        style="@style/text_detail_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currencies" />

                    <TextView
                        android:id="@+id/language_view"
                        style="@style/text_detail_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/languages" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>